// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`searchCyclist > finds cyclists by last name for Pro cycling manager 2018 1`] = `
{
  "cyclists": [
    {
      "acceleration": 74,
      "baroudeur": 65,
      "cobble": 67,
      "country": "Belgium",
      "currentAbility": null,
      "downhilling": 75,
      "endurance": 68,
      "firstName": "Tosh",
      "hill": 74,
      "id": 2548,
      "lastName": "Van der Sande",
      "mediumMountain": null,
      "mountain": 62,
      "plain": 72,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 67,
      "sprint": 72,
      "timeTrial": 65,
    },
    {
      "acceleration": 73,
      "baroudeur": 61,
      "cobble": 65,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 67,
      "endurance": 67,
      "firstName": "Nick",
      "hill": 72,
      "id": 3396,
      "lastName": "Van Der Lijke",
      "mediumMountain": null,
      "mountain": 64,
      "plain": 70,
      "prologue": 67,
      "recuperation": 67,
      "resistance": 65,
      "sprint": 68,
      "timeTrial": 63,
    },
    {
      "acceleration": 65,
      "baroudeur": 66,
      "cobble": 61,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 66,
      "endurance": 60,
      "firstName": "Patrick",
      "hill": 58,
      "id": 3869,
      "lastName": "Van Der Duin",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 67,
      "prologue": 63,
      "recuperation": 61,
      "resistance": 59,
      "sprint": 64,
      "timeTrial": 60,
    },
    {
      "acceleration": 67,
      "baroudeur": 67,
      "cobble": 62,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 67,
      "endurance": 62,
      "firstName": "Taco",
      "hill": 61,
      "id": 3871,
      "lastName": "Van Der Hoorn",
      "mediumMountain": null,
      "mountain": 55,
      "plain": 68,
      "prologue": 64,
      "recuperation": 65,
      "resistance": 63,
      "sprint": 65,
      "timeTrial": 62,
    },
    {
      "acceleration": 72,
      "baroudeur": 61,
      "cobble": 63,
      "country": "Australia",
      "currentAbility": null,
      "downhilling": 69,
      "endurance": 65,
      "firstName": "Neil",
      "hill": 64,
      "id": 3955,
      "lastName": "Van Der Ploeg",
      "mediumMountain": null,
      "mountain": 56,
      "plain": 70,
      "prologue": 69,
      "recuperation": 66,
      "resistance": 63,
      "sprint": 70,
      "timeTrial": 62,
    },
    {
      "acceleration": 72,
      "baroudeur": 69,
      "cobble": 63,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 63,
      "endurance": 61,
      "firstName": "Nick",
      "hill": 59,
      "id": 3968,
      "lastName": "Van Der Meer",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 69,
      "prologue": 63,
      "recuperation": 61,
      "resistance": 60,
      "sprint": 71,
      "timeTrial": 60,
    },
    {
      "acceleration": 65,
      "baroudeur": 68,
      "cobble": 61,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 65,
      "endurance": 61,
      "firstName": "Arno",
      "hill": 60,
      "id": 3995,
      "lastName": "Van Der Zwet",
      "mediumMountain": null,
      "mountain": 55,
      "plain": 69,
      "prologue": 67,
      "recuperation": 64,
      "resistance": 63,
      "sprint": 64,
      "timeTrial": 66,
    },
    {
      "acceleration": 61,
      "baroudeur": 68,
      "cobble": 56,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 61,
      "endurance": 58,
      "firstName": "Mel",
      "hill": 62,
      "id": 6025,
      "lastName": "Van Der Veekens",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 64,
      "prologue": 61,
      "recuperation": 52,
      "resistance": 56,
      "sprint": 57,
      "timeTrial": 58,
    },
    {
      "acceleration": 64,
      "baroudeur": 71,
      "cobble": 51,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 68,
      "endurance": 56,
      "firstName": "Bas",
      "hill": 60,
      "id": 6072,
      "lastName": "Van Der Kooij",
      "mediumMountain": null,
      "mountain": 61,
      "plain": 63,
      "prologue": 59,
      "recuperation": 56,
      "resistance": 57,
      "sprint": 57,
      "timeTrial": 56,
    },
    {
      "acceleration": 52,
      "baroudeur": 56,
      "cobble": 57,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 65,
      "endurance": 57,
      "firstName": "Dennis",
      "hill": 56,
      "id": 6085,
      "lastName": "van der Horst",
      "mediumMountain": null,
      "mountain": 56,
      "plain": 59,
      "prologue": 59,
      "recuperation": 52,
      "resistance": 57,
      "sprint": 59,
      "timeTrial": 59,
    },
  ],
}
`;

exports[`searchCyclist > finds cyclists by last name for Pro cycling manager 2019 1`] = `
{
  "cyclists": [
    {
      "acceleration": 74,
      "baroudeur": 65,
      "cobble": 68,
      "country": "Belgium",
      "currentAbility": null,
      "downhilling": 75,
      "endurance": 68,
      "firstName": "Tosh",
      "hill": 73,
      "id": 2548,
      "lastName": "Van der Sande",
      "mediumMountain": null,
      "mountain": 62,
      "plain": 72,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 67,
      "sprint": 72,
      "timeTrial": 65,
    },
    {
      "acceleration": 74,
      "baroudeur": 61,
      "cobble": 65,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 67,
      "endurance": 69,
      "firstName": "Nick",
      "hill": 72,
      "id": 3396,
      "lastName": "Van Der Lijke",
      "mediumMountain": null,
      "mountain": 64,
      "plain": 71,
      "prologue": 67,
      "recuperation": 67,
      "resistance": 69,
      "sprint": 70,
      "timeTrial": 63,
    },
    {
      "acceleration": 65,
      "baroudeur": 66,
      "cobble": 61,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 66,
      "endurance": 60,
      "firstName": "Patrick",
      "hill": 58,
      "id": 3869,
      "lastName": "Van Der Duin",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 67,
      "prologue": 63,
      "recuperation": 61,
      "resistance": 59,
      "sprint": 64,
      "timeTrial": 60,
    },
    {
      "acceleration": 67,
      "baroudeur": 71,
      "cobble": 68,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 67,
      "endurance": 68,
      "firstName": "Taco",
      "hill": 67,
      "id": 3871,
      "lastName": "Van Der Hoorn",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 74,
      "prologue": 64,
      "recuperation": 68,
      "resistance": 69,
      "sprint": 65,
      "timeTrial": 62,
    },
    {
      "acceleration": 72,
      "baroudeur": 61,
      "cobble": 63,
      "country": "Australia",
      "currentAbility": null,
      "downhilling": 69,
      "endurance": 65,
      "firstName": "Neil",
      "hill": 64,
      "id": 3955,
      "lastName": "Van Der Ploeg",
      "mediumMountain": null,
      "mountain": 56,
      "plain": 70,
      "prologue": 69,
      "recuperation": 66,
      "resistance": 63,
      "sprint": 70,
      "timeTrial": 62,
    },
    {
      "acceleration": 72,
      "baroudeur": 69,
      "cobble": 63,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 63,
      "endurance": 61,
      "firstName": "Nick",
      "hill": 59,
      "id": 3968,
      "lastName": "Van Der Meer",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 69,
      "prologue": 63,
      "recuperation": 61,
      "resistance": 60,
      "sprint": 71,
      "timeTrial": 60,
    },
    {
      "acceleration": 65,
      "baroudeur": 68,
      "cobble": 61,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 65,
      "endurance": 61,
      "firstName": "Arno",
      "hill": 60,
      "id": 3995,
      "lastName": "Van Der Zwet",
      "mediumMountain": null,
      "mountain": 55,
      "plain": 69,
      "prologue": 67,
      "recuperation": 64,
      "resistance": 63,
      "sprint": 64,
      "timeTrial": 66,
    },
    {
      "acceleration": 72,
      "baroudeur": 61,
      "cobble": 64,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 75,
      "endurance": 57,
      "firstName": "Maik",
      "hill": 60,
      "id": 5920,
      "lastName": "Van Der Heijden",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 65,
      "prologue": 66,
      "recuperation": 58,
      "resistance": 59,
      "sprint": 69,
      "timeTrial": 64,
    },
    {
      "acceleration": 61,
      "baroudeur": 68,
      "cobble": 56,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 61,
      "endurance": 58,
      "firstName": "Mel",
      "hill": 62,
      "id": 6025,
      "lastName": "Van Der Veekens",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 64,
      "prologue": 61,
      "recuperation": 52,
      "resistance": 56,
      "sprint": 57,
      "timeTrial": 58,
    },
    {
      "acceleration": 76,
      "baroudeur": 67,
      "cobble": 65,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 70,
      "endurance": 66,
      "firstName": "Bas",
      "hill": 64,
      "id": 6072,
      "lastName": "Van Der Kooij",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 70,
      "prologue": 63,
      "recuperation": 64,
      "resistance": 64,
      "sprint": 74,
      "timeTrial": 59,
    },
  ],
}
`;

exports[`searchCyclist > finds cyclists by last name for Pro cycling manager 2021 1`] = `
{
  "cyclists": [
    {
      "acceleration": 75,
      "baroudeur": 65,
      "cobble": 73,
      "country": "Belgium",
      "currentAbility": null,
      "downhilling": 75,
      "endurance": 70,
      "firstName": "Tosh",
      "hill": 73,
      "id": 2548,
      "lastName": "Van der Sande",
      "mediumMountain": null,
      "mountain": 62,
      "plain": 73,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 68,
      "sprint": 73,
      "timeTrial": 65,
    },
    {
      "acceleration": 69,
      "baroudeur": 61,
      "cobble": 65,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 67,
      "endurance": 69,
      "firstName": "Nick",
      "hill": 72,
      "id": 3396,
      "lastName": "Van Der Lijke",
      "mediumMountain": null,
      "mountain": 64,
      "plain": 71,
      "prologue": 67,
      "recuperation": 68,
      "resistance": 69,
      "sprint": 66,
      "timeTrial": 63,
    },
    {
      "acceleration": 69,
      "baroudeur": 75,
      "cobble": 72,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 72,
      "endurance": 70,
      "firstName": "Taco",
      "hill": 68,
      "id": 3871,
      "lastName": "Van Der Hoorn",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 76,
      "prologue": 62,
      "recuperation": 69,
      "resistance": 69,
      "sprint": 65,
      "timeTrial": 62,
    },
    {
      "acceleration": 72,
      "baroudeur": 69,
      "cobble": 63,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 63,
      "endurance": 61,
      "firstName": "Nick",
      "hill": 59,
      "id": 3968,
      "lastName": "Van Der Meer",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 69,
      "prologue": 63,
      "recuperation": 61,
      "resistance": 60,
      "sprint": 71,
      "timeTrial": 60,
    },
    {
      "acceleration": 72,
      "baroudeur": 61,
      "cobble": 64,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 75,
      "endurance": 57,
      "firstName": "Maik",
      "hill": 60,
      "id": 5920,
      "lastName": "Van Der Heijden",
      "mediumMountain": null,
      "mountain": 54,
      "plain": 65,
      "prologue": 66,
      "recuperation": 58,
      "resistance": 59,
      "sprint": 69,
      "timeTrial": 64,
    },
    {
      "acceleration": 61,
      "baroudeur": 68,
      "cobble": 56,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 61,
      "endurance": 58,
      "firstName": "Mel",
      "hill": 62,
      "id": 6025,
      "lastName": "Van Der Veekens",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 64,
      "prologue": 61,
      "recuperation": 52,
      "resistance": 56,
      "sprint": 57,
      "timeTrial": 58,
    },
    {
      "acceleration": 76,
      "baroudeur": 67,
      "cobble": 65,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 70,
      "endurance": 66,
      "firstName": "Bas",
      "hill": 64,
      "id": 6072,
      "lastName": "Van Der Kooij",
      "mediumMountain": null,
      "mountain": 59,
      "plain": 70,
      "prologue": 63,
      "recuperation": 69,
      "resistance": 64,
      "sprint": 74,
      "timeTrial": 59,
    },
    {
      "acceleration": 64,
      "baroudeur": 66,
      "cobble": 61,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 65,
      "endurance": 59,
      "firstName": "Dennis",
      "hill": 64,
      "id": 6085,
      "lastName": "Van der Horst",
      "mediumMountain": null,
      "mountain": 57,
      "plain": 67,
      "prologue": 61,
      "recuperation": 62,
      "resistance": 59,
      "sprint": 66,
      "timeTrial": 61,
    },
    {
      "acceleration": 62,
      "baroudeur": 64,
      "cobble": 60,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 65,
      "endurance": 59,
      "firstName": "Danny",
      "hill": 67,
      "id": 6461,
      "lastName": "Van Der Tuuk",
      "mediumMountain": null,
      "mountain": 63,
      "plain": 66,
      "prologue": 63,
      "recuperation": 63,
      "resistance": 61,
      "sprint": 61,
      "timeTrial": 63,
    },
    {
      "acceleration": 84,
      "baroudeur": 69,
      "cobble": 82,
      "country": "Netherlands",
      "currentAbility": null,
      "downhilling": 84,
      "endurance": 82,
      "firstName": "Mathieu",
      "hill": 80,
      "id": 6764,
      "lastName": "Van Der Poel",
      "mediumMountain": null,
      "mountain": 65,
      "plain": 83,
      "prologue": 77,
      "recuperation": 70,
      "resistance": 81,
      "sprint": 79,
      "timeTrial": 68,
    },
  ],
}
`;

exports[`searchCyclist > finds cyclists by last name for Pro cycling manager 2025 1`] = `
{
  "cyclists": [
    {
      "acceleration": 68,
      "baroudeur": 65,
      "cobble": 72,
      "country": "Belgium",
      "currentAbility": 0,
      "downhilling": 75,
      "endurance": 65,
      "firstName": "Tosh",
      "hill": 70,
      "id": 2548,
      "lastName": "Van Der Sande",
      "mediumMountain": 67,
      "mountain": 64,
      "plain": 71,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 68,
      "timeTrial": 65,
    },
    {
      "acceleration": 69,
      "baroudeur": 80,
      "cobble": 72,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 72,
      "endurance": 72,
      "firstName": "Taco",
      "hill": 69,
      "id": 3871,
      "lastName": "Van Der Hoorn",
      "mediumMountain": 64,
      "mountain": 59,
      "plain": 74,
      "prologue": 62,
      "recuperation": 67,
      "resistance": 69,
      "sprint": 65,
      "timeTrial": 62,
    },
    {
      "acceleration": 72,
      "baroudeur": 69,
      "cobble": 65,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 63,
      "endurance": 62,
      "firstName": "Nick",
      "hill": 59,
      "id": 3968,
      "lastName": "Van Der Meer",
      "mediumMountain": 57,
      "mountain": 54,
      "plain": 69,
      "prologue": 63,
      "recuperation": 61,
      "resistance": 62,
      "sprint": 70,
      "timeTrial": 60,
    },
    {
      "acceleration": 64,
      "baroudeur": 66,
      "cobble": 61,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 65,
      "endurance": 59,
      "firstName": "Dennis",
      "hill": 64,
      "id": 6085,
      "lastName": "Van Der Horst",
      "mediumMountain": 61,
      "mountain": 57,
      "plain": 67,
      "prologue": 61,
      "recuperation": 62,
      "resistance": 59,
      "sprint": 66,
      "timeTrial": 61,
    },
    {
      "acceleration": 61,
      "baroudeur": 64,
      "cobble": 64,
      "country": "Poland",
      "currentAbility": 0,
      "downhilling": 65,
      "endurance": 60,
      "firstName": "Danny",
      "hill": 66,
      "id": 6461,
      "lastName": "Van Der Tuuk",
      "mediumMountain": 64,
      "mountain": 62,
      "plain": 67,
      "prologue": 65,
      "recuperation": 63,
      "resistance": 61,
      "sprint": 60,
      "timeTrial": 65,
    },
    {
      "acceleration": 81,
      "baroudeur": 76,
      "cobble": 82,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 84,
      "endurance": 83,
      "firstName": "Mathieu",
      "hill": 79,
      "id": 6764,
      "lastName": "Van Der Poel",
      "mediumMountain": 66,
      "mountain": 61,
      "plain": 83,
      "prologue": 78,
      "recuperation": 70,
      "resistance": 82,
      "sprint": 75,
      "timeTrial": 75,
    },
    {
      "acceleration": 56,
      "baroudeur": 67,
      "cobble": 57,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 60,
      "endurance": 56,
      "firstName": "Niels",
      "hill": 54,
      "id": 7503,
      "lastName": "Van Der Gracht",
      "mediumMountain": 52,
      "mountain": 50,
      "plain": 63,
      "prologue": 56,
      "recuperation": 57,
      "resistance": 53,
      "sprint": 57,
      "timeTrial": 58,
    },
    {
      "acceleration": 66,
      "baroudeur": 65,
      "cobble": 60,
      "country": "Belgium",
      "currentAbility": 0,
      "downhilling": 65,
      "endurance": 64,
      "firstName": "Aaron",
      "hill": 68,
      "id": 7605,
      "lastName": "Van Der Beken",
      "mediumMountain": 68,
      "mountain": 66,
      "plain": 64,
      "prologue": 57,
      "recuperation": 68,
      "resistance": 63,
      "sprint": 60,
      "timeTrial": 57,
    },
    {
      "acceleration": 65,
      "baroudeur": 70,
      "cobble": 70,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 70,
      "endurance": 66,
      "firstName": "Max",
      "hill": 69,
      "id": 8057,
      "lastName": "Van der Meulen",
      "mediumMountain": 69,
      "mountain": 68,
      "plain": 66,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 64,
      "sprint": 64,
      "timeTrial": 63,
    },
    {
      "acceleration": 58,
      "baroudeur": 72,
      "cobble": 64,
      "country": "Netherlands",
      "currentAbility": 0,
      "downhilling": 68,
      "endurance": 59,
      "firstName": "Jardi",
      "hill": 66,
      "id": 8321,
      "lastName": "Van Der Lee",
      "mediumMountain": 65,
      "mountain": 65,
      "plain": 66,
      "prologue": 62,
      "recuperation": 60,
      "resistance": 61,
      "sprint": 59,
      "timeTrial": 62,
    },
  ],
}
`;
